# animatronics_head_ros2

./: .gitignore  MOTOR_CALIBRATION.md  README.md
bringup/: package.xml  setup.py
bringup/bringup/: __init__.py  mediapipe_test.py
bringup/config/: head.rules  jaw.yaml  mouth.yaml  webcam.rules
bringup/launch/: bringup.launch.py  collect_data.launch.py  eye_tracking.launch.py  face_mimic.launch.py  mimic_complete.launch.py  slider_control.launch.py  video_mimic.launch.py
docs/: FACE_MIMIC.md  MOTOR_CALIBRATION.md
hardware_interface/: package.xml  setup.py
hardware_interface/hardware_interface/: __init__.py  dynamixel_controller.py  motor_controller.py
hardware_interface/resource/: hardware_interface
mimic/: package.xml  setup.py
mimic/mimic/: __init__.py  face_mimic.py
src/animatronics_head_ros2/: package.xml  setup.cfg  setup.py
src/animatronics_head_ros2/animatronics_head_ros2/: blendshape_mimic.py  data_collector.py  dynamixel_controller.py  eye_controller.py  face_mimic.py  motor_controller.py  motor_slider_control.py  motor_value_checker.py  neural_face_mimic.py  record_expression.py  video_mimic.py
src/animatronics_head_ros2/config/: eye.yaml  motor_limits.yaml  nose_eye_brow.yaml
src/animatronics_head_ros2/launch/: animatronics_head_ros2.code-workspace  collect_data.launch.py  eye_tracking.launch.py  face_mimic.launch.py  slider_control.launch.py
src/animatronics_head_ros2/scripts/: train_neural_network.py
training/: package.xml  setup.py
training/training/: __init__.py  train_model.py
