<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>animatronics_head_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 package for animatronics head control with motor limits</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
